Created first episode

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,4 +1,6 @@
-$ryuk_green: green;
-$ryuk_green_light: #00b94a;
-$ryuk_white: white;
-$ryuk_black: black;
+* {
+  --ryuk_green: green;
+  --ryuk_green_light: #00b94a;
+  --ryuk_white: white;
+  --ryuk_black: black;
+}
