--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -7,31 +7,31 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  color: $ryuk_white;
+  color: var(--ryuk_white);
   
   h1 {
     font-family: "Minecraft";
     font-size: 5.6em;
     text-align: center;
-    text-shadow: 5px 5px 5px $ryuk_black;
+    text-shadow: 5px 5px 5px var(--ryuk_black);
   }
   
   h2 {
     font-family: "Minecraft";
     font-size: 3em;
     text-align: center;
-    text-shadow: 5px 5px 5px $ryuk_black;
+    text-shadow: 5px 5px 5px var(--ryuk_black);
   }
 
   input.username {
     background: transparent;
     border: none;
-    border-bottom: 2px solid $ryuk_white;
-    color: $ryuk_white;
+    border-bottom: 2px solid var(--ryuk_white);
+    color: var(--ryuk_white);
     font-family: "Minecraft";
     font-size: 2em;
     outline: none;
     margin-bottom: 16px;
-    text-shadow: 5px 5px 5px $ryuk_black;
+    text-shadow: 5px 5px 5px var(--ryuk_black);
   }
 }
