--- a/src/pages/episode_first/episode_first.scss
+++ b/src/pages/episode_first/episode_first.scss
@@ -3,15 +3,16 @@
   background-image: url('/static/assets/episode_first_bg.png'); //not bad
   display: flex;
   height: 100%;
-  justify-content: center;
   flex-direction: column;
   
   #map {
-    
+    align-self: flex-start;
   }
 
   div.instructions {
     font-family: "Minecraft";
     color: var(--ryuk_white);
+    justify-self: flex-end;
+    z-index: 4;
   }
 }
